# secm-protocol

./: ARCHITECTS-CHARTER.md  AUTHORS.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFESTO.md  PRESERVATION.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
casestudies/: CS-0001-worldcup-prophet.md  CS-0002-btc-preregistered-probabilities.md  PROPHET-AUDIT.md  RANKING-01-analyst-view.md  SCREEN-01-value-capture.md  SCREEN-02-full-crossreference.md  SCREEN-03-institutional-sectors.md  SCREEN-04-ai-infrastructure.md
implementation/: pyproject.toml
implementation/src/secm/: __init__.py  graph.py  reduction.py  registry.py  schema.py  units.py
implementation/src/secm/core/: __init__.py  cke.py  fe008_validation.py
implementation/src/secm/engines/: __init__.py  fe001_nominal.py  fe002_temporal.py  fe005_context.py  fe006_behavioral.py
implementation/src/secm/ingestion/: __init__.py  bcb.py
implementation/src/secm/solvers/: __init__.py  directions.py  personal.py
implementation/tests/: test_cke.py  test_directions.py  test_e2e.py  test_fe001.py  test_fe002.py  test_fe005.py  test_fe006.py  test_fe008.py  test_graph.py  test_ingestion.py  test_schema.py  test_solver.py
ingestion/: SOURCE-REGISTRY.md
locales/: pt-BR.yml
rfcs/: README.md  RFC-0000-genesis.md  RFC-0001-constitution.md  RFC-0002-metadata-schema.md  RFC-0003-semantic-layer.md  RFC-0006-licensing.md  RFC-0007-schema-validator.md  RFC-0008-privacy-architecture.md  RFC-0009-outcome-registry.md  RFC-0010-contribution-weight.md  RFC-0011-rx-input-specification.md  RFC-0012-engine-classification.md  (+9 more)
(+28 files in other folders)
