[project]
name = "secm-core"
version = "0.1.0"
description = "SECM Protocol reference implementation - RFC-0002 canonical metadata unit"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
